--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <i class="ion-ios-plus-outline"></i>New game
       </button>
       <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
-      <button class="btn-hold"><i class="ion-loop"></i>Stop</button>
+      <button class="btn-stop"><i class="ion-loop"></i>Stop</button>
 
       <img src="img/dice-5.png" alt="Dice" class="dice" />
     </div>
