--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </button>
       <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
       <button class="btn-stop"><i class="ion-arrow-right-c stop"></i>Stop</button>
-
+      <input class="input-finish" placeholder="Final Score" type="number">
       <img src="img/dice-5.png" alt="Dice" class="dice" />
     </div>
 
